Fix overlapping quiz timer

--- a/scss/wwu2019/3rd-party-fixes.scss
+++ b/scss/wwu2019/3rd-party-fixes.scss
@@ -33,3 +33,8 @@ body.fullscreenWrapper {
         display: none;
     }
 }
+
+/* Put Quiztimer a bit higher to prevent overlapping the question */
+#quiz-timer-wrapper {
+    top: 0;
+}
